# api

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  Pipfile  README.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: python-ci.yml
docs/superpowers/plans/: 2026-07-07-diversity-score-metric.md
docs/superpowers/specs/: 2026-07-07-diversity-score-metric-design.md  2026-07-17-diversity-score-snapshot-design.md
scripts/: apictl.sh  backfill_posthog.py  backfill_posthog_test.py  deploy.sh  e2e-rank-test.sh  feed_debug.py  feed_debug_test.py  feed_debug_web.py  feed_debug_web_test.py  feed_format.py  feed_format_test.py  feed_view.py  feed_view_test.py  gcp_setup.sh  gcp_setup_test.py  get_firebase_token.py  manage_post.py  manage_post_test.py  profile_es_queries.py  profile_es_queries_test.py  profile_perspective.py  publish_feed.py  publish_feed_test.py  pull_slow_es_queries.sh
src/app/: __init__.py  conftest.py  documents.py  feeds.py  feeds_test.py  main.py  main_test.py  models.py  models_feed_debug.py  models_feed_transparency.py  models_test.py  security.py  security_test.py
src/app/lib/: atproto_auth.py  atproto_auth_test.py  bsky.py  config.py  config_test.py  diversify.py  diversify_test.py  elasticsearch.py  elasticsearch_test.py  embeddings.py  es_client.py  es_client_test.py  feed_cache.py  feed_cache_test.py  feed_debug.py  feed_debug_test.py  metrics.py  (+16 more)
src/greenearth_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_auth.py  test_health.py
(+47 files in other folders)
